--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@exponent/react-native-navigator": "^0.3.5",
     "assert": "^1.3.0",
     "immutable": "^3.7.6",
-    "react-native-tabs": "^1.0.2"
+    "react-native-tabs": "github:EdtechFoundry/react-native-tabs#c709af985dc51ef0732b1b2aee362c4231ecdeb1"
   },
   "peerDependencies": {
     "react-native": "^0.22.0-rc",
